document new job which synchronize client registrations with SCC

--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -73,9 +73,15 @@ menu:kickstartfile-sync-default:[]::
 Generates Cobbler files corresponding to Kickstart profiles created by the configuration wizard.
 
 
-// we probably no longer want to reference NCC; I do not know whether it works the same way with SCC (if at all)
-menu:mgr-register-default:[]::
-Calls the [command]``mgr-register`` command, which synchronizes client registration data with NCC (new, changed or deleted clients' data are forwarded).
+menu:mgr-forward-registration-default:[]::
+Synchronizes client registration data with SUSE Customer Center (SCC).
+By default, new, changed, or deleted client data are forwarded.
+To disable synchronization set in [path]``/etc/rhn/rhn.conf``:
++
+----
+server.susemanager.forward_registration = 0
+----
++
 
 
 menu:mgr-sync-refresh-default:[]::
