using salt-minion instead of the bundle

--- a/modules/client-configuration/pages/registration-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/registration-methods-saltbundle.adoc
@@ -5,16 +5,21 @@ Since end of 2021, the registration method with the so-called Salt bundle is ava
 The Salt bundle is provided as the [package]``venv-salt-minion`` that consists of Salt and all the packages the version of Salt depends on.
 Using the Salt bundle it is no longer needed that the client provides the required Python version and [package]``python-xml`` package.
 
-If you bootstrap new clients, registration with the Salt bundle is the
-default method.  You can switch existing clients to the Salt bundle
-method.  If you switch the [package]``salt-minion`` package and its
-Python version will stay installed.
+If you bootstrap new clients, registration with the Salt bundle is the default method.
+You can switch existing clients to the Salt bundle method.
+If you switch the [package]``salt-minion`` package and its Python version will stay installed.
+
+On the other hand, it is also possible to avoid installing the Salt bundle and keep using [package]``salt-minion`` instead.
+In this case specify one of these options:
+
+* Execute [command]``mgr-bootstrap`` with  [option]``--no-bundle`` option.
+* Set [literal]``AVOID_VENV_SALT_MINION`` to [literal]``1`` in the generated bootstrap script.
+
+
 
 [IMPORTANT]
 ====
 At the moment (2021), the Salt bundle does not support the Salt SSH contact method.
 Stay with [package]``salt-minion`` package if you use Salt SSH.
 ====
-
-
 
