--- a/modules/client-configuration/pages/registration-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/registration-methods-saltbundle.adoc
@@ -14,8 +14,7 @@ In this case specify one of these options:
 
 * Execute [command]``mgr-bootstrap`` with  [option]``--no-bundle`` option.
 * Set [literal]``AVOID_VENV_SALT_MINION`` to [literal]``1`` in the generated bootstrap script.
-
-
+* For bootstrap state set the [literal]``mgr_avoid_venv_salt_minion`` pillar set to [literal]``True``.
 
 [IMPORTANT]
 ====
