more info, commented

--- a/modules/client-configuration/pages/registration-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/registration-methods-saltbundle.adoc
@@ -7,7 +7,15 @@ Using the Salt bundle it is no longer needed that the client provides the requir
 
 If you bootstrap new clients, registration with the Salt bundle is the default method.
 You can switch existing clients to the Salt bundle method.
-If you switch the [package]``salt-minion`` package and its Python version will stay installed.
+If you switch, the [package]``salt-minion`` package and its Python version will stay installed.
+////
+Implemented the state to switch from salt-minion to venv-salt-minion - util.mgr_switch_to_venv_minion
+
+It's better to run it in two steps:
+
+    Apply it with no pillar specified first to switch to venv-salt-minion (copy config files etc., but not cleaning up the original salt-minion confgs and packages)
+    Apply it with mgr_purge_non_venv_salt set to True to remove salt-minion and mgr_purge_non_venv_salt_files set to True to remove all the files related to salt-minion
+////
 
 On the other hand, it is also possible to avoid installing the Salt bundle and keep using [package]``salt-minion`` instead.
 In this case specify one of these options:
