Improved Admin Guide navigation bar.

--- a/modules/administration/pages/auditing.adoc
+++ b/modules/administration/pages/auditing.adoc
@@ -1,5 +1,5 @@
 [[auditing]]
-= Auditing
+= Auditing Packages
 
 In {productname}, you can keep track of your clients through a series of auditing tasks.
 You can check that your clients are up to date with all public security patches (CVEs), perform subscription matching, and use OpenSCAP to check for specification compliance.
