--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -1,5 +1,5 @@
 [[backup-restore]]
-= Backup and Restore
+= Backing Up and Restoring {productname}
 
 Back up your {productname} installation regularly, to prevent data loss.
 Because {productname} relies on a database as well as the installed program and configurations, it is important to back up all components of your installation.
