--- a/modules/administration/pages/channel-management-administration.adoc
+++ b/modules/administration/pages/channel-management-administration.adoc
@@ -1,5 +1,5 @@
 [[channel-management]]
-= Channel Management
+= Channel Administration
 
 Channels are a method of grouping software packages.
 
@@ -20,7 +20,7 @@ The client can then install or update packages from the repositories associated 
 If you want to use your own packages in your environment, you can create custom channels.
 Custom channels can be used as a base channel, or you can associate them with a vendor base channel.
 
-For more on creating custom channels, see xref:administration:custom-channels.adoc[].
+For more on creating custom channels, see xref:administration:channel-management-custom-channels.adoc[].
 
 
 
@@ -39,11 +39,11 @@ You can implement restrictions on the channel using the {webui}.
 
 
 
-== Delete Channels
+== Channel Deletion
 
 You can delete vendor software channels from the command prompt.
 
-For information about deleting custom channels, see xref:administration:custom-channels.adoc[].
+For information about deleting custom channels, see xref:administration:channel-management-custom-channels.adoc[].
 
 
 
