--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -1,5 +1,5 @@
 [[content-lifecycle]]
-= Content Lifecycle Management
+= Content Lifecycle Management with {productname}
 
 Content lifecycle management allows you to customize and test packages before updating production clients.
 This is especially useful if you need to apply updates during a limited maintenance window.
