--- a/modules/administration/pages/content-staging.adoc
+++ b/modules/administration/pages/content-staging.adoc
@@ -1,5 +1,5 @@
 [[content-staging]]
-= Content Staging
+= Content Staging in {productname}
 
 
 Staging is used by clients to download packages in advance, before they are installed.
