--- a/modules/administration/pages/disconnected-setup.adoc
+++ b/modules/administration/pages/disconnected-setup.adoc
@@ -1,5 +1,5 @@
 [[disconnected-setup]]
-= Disconnected Setup
+= Disconnected Setup of {productname}
 
 When it is not possible to connect {productname} to the internet, you can use it within a disconnected environment.
 
