--- a/modules/administration/pages/disk-space-management.adoc
+++ b/modules/administration/pages/disk-space-management.adoc
@@ -1,5 +1,5 @@
-[[space-management]]
-= Managing Disk Space
+[[disk-space-management]]
+= Disk Space Management with {productname}
 
 Running out of disk space can have a severe impact on the {productname} database and file structure which, in some cases, is not recoverable.
 
