--- a/modules/administration/pages/iss.adoc
+++ b/modules/administration/pages/iss.adoc
@@ -1,5 +1,5 @@
 [[iss]]
-= Inter-Server Synchronization
+= Inter-Server Synchronization in {productname}
 
 If you have more than one {productname} installation, you need to ensure that they stay aligned on content and permissions.
 Inter-Server Synchronization (ISS) allows you to connect two or more {productname} Servers and keep them up-to-date.
