--- a/modules/administration/pages/live-patching.adoc
+++ b/modules/administration/pages/live-patching.adoc
@@ -1,6 +1,5 @@
 [[live-patching]]
-= Live Patching with SUSE Manager
-
+= Live Patching with {productname} 
 
 Performing a kernel update usually requires a system reboot.
 Common vulnerability and exposure (CVE) patches should be applied as soon as possible, but if you cannot afford the downtime, you can use Live Patching to inject these important updates and skip the need to reboot.
