--- a/modules/administration/pages/maintenance-windows.adoc
+++ b/modules/administration/pages/maintenance-windows.adoc
@@ -1,5 +1,5 @@
 [[maintenance-windows]]
-= Maintenance Windows
+= Maintenance Windows in {productname}
 
 The maintenance windows feature in {productname} allows you to schedule actions to occur during a scheduled maintenance window period.
 When you have created your maintenance window schedule, and applied it to a client, you are prevented from executing some actions outside of the specified period.
