--- a/modules/administration/pages/mgr-sync.adoc
+++ b/modules/administration/pages/mgr-sync.adoc
@@ -1,5 +1,5 @@
 [[mgr.sync]]
-= Using ``mgr-sync``
+= ``mgr-sync`` Command
 
 The ``mgr-sync`` tool is used at the command prompt.
 It provides functions for using {productname} that are not always available in the {webui}.
