--- a/modules/administration/pages/openscap.adoc
+++ b/modules/administration/pages/openscap.adoc
@@ -85,7 +85,7 @@ You can do this in the same way as you move any other file, using physical stora
 
 We recommend that you create a package to distribute content files to clients that you are managing with {productname}.
 Packages can be signed and verified to ensure their integrity.
-For more information, see xref:administration:custom-channels.adoc[].
+For more information, see xref:administration:channel-management-custom-channels.adoc[].
 
 
 
