--- a/modules/administration/pages/organizations.adoc
+++ b/modules/administration/pages/organizations.adoc
@@ -1,5 +1,5 @@
 [[organizations]]
-= Organizations
+= Organizations in {productname}
 
 
 Organizations are used to manage user access and permissions within {productname}.
