--- a/modules/administration/pages/patch-management.adoc
+++ b/modules/administration/pages/patch-management.adoc
@@ -1,8 +1,5 @@
 [[patch-management]]
-= Patch Management
-
-This chapter contains various topics related to patch management.
-
+= Patch Management in {productname}
 
 == Retracted Patches
 
