--- a/modules/administration/pages/ssl-certs-selfsigned.adoc
+++ b/modules/administration/pages/ssl-certs-selfsigned.adoc
@@ -129,7 +129,7 @@ When you have the combined RPMs, you can deploy the combined CA certificates to 
 * Summary: SSL-CA-Channel
 
 +
-For more on creating custom channels, see xref:administration:channel-management.adoc[].
+For more on creating custom channels, see xref:administration:channel-management-administration.adoc[].
 . Upload the CA certificate RPM to the channel:
 +
 ----
