--- a/modules/administration/pages/subscription-matching.adoc
+++ b/modules/administration/pages/subscription-matching.adoc
@@ -1,5 +1,5 @@
 [[subscription-matching]]
-= Subscription Matching
+= Subscription Matching in {productname}
 
 Your {suse} products require subscriptions, which are managed by the {scc} (SCC).
 {productname} runs a nightly report checking the subscription status of all your registered clients against your SCC account.
