--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -1,5 +1,5 @@
 [[ref.webui.admin.schedules]]
-= Task Schedules
+= Task Schedules in {productname}
 
 Under menu:Admin[Task Schedules] all predefined task bunches are listed.
 
