--- a/modules/administration/pages/tshoot-diskspace.adoc
+++ b/modules/administration/pages/tshoot-diskspace.adoc
@@ -22,10 +22,11 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 Running out of disk space can have a severe impact on the {productname} database and file structure which, in most cases, is not recoverable.
 {productname} monitors free space in specific directories, and has configurable alerts.
 For more on space management, see xref:administration:space-management.adoc[].
+For more on disk space management, see xref:administration:disk-space-management.adoc[].
 
 You can recover disk space by removing unused software channels.
-For instructions on how to delete vendor channels, see xref:administration:channel-management.adoc[].
-For instructions on how to delete custom channels, see xref:administration:custom-channels.adoc[].
+For instructions on how to delete vendor channels, see xref:administration:channel-management-administration.adoc[].
+For instructions on how to delete custom channels, see xref:administration:channel-management-custom-channels.adoc[].
 
 You can also recover disk space by cleaning up unused activation keys, content lifecycle projects, and client registrations.
 You can also remove redundant database entries:
