--- a/modules/administration/pages/tuning-changelogs.adoc
+++ b/modules/administration/pages/tuning-changelogs.adoc
@@ -1,5 +1,5 @@
 [[tuning-changelogs]]
-= Tuning Changelogs
+= Tuning Changelogs in {productname}
 
 Some packages have a long list of changelog entries.
 This data is downloaded by default, but it is not always useful information to keep.
