--- a/modules/administration/pages/users.adoc
+++ b/modules/administration/pages/users.adoc
@@ -1,5 +1,5 @@
 [[users]]
-= Users
+= Users in {productname}
 
 {productname} Administrators can add new users, grant permissions, and deactivate or delete users.
 If you are managing a large number of users, you can assign users to system groups to manage permissions at a group level.
