Fixed links to renamed files.

--- a/modules/client-configuration/pages/activation-keys.adoc
+++ b/modules/client-configuration/pages/activation-keys.adoc
@@ -41,7 +41,7 @@ For more information, see xref:reference:systems/activation-keys.adoc[].
 ====
 +
 . In the [guimenu]``Base Channels`` drop-down box, select the appropriate base software channel, and allow the relevant child channels to populate.
-    For more information, see xref:reference:admin/setup-wizard.adoc#vle.webui.admin.wizard.products[] and xref:administration:custom-channels.adoc[].
+    For more information, see xref:reference:admin/setup-wizard.adoc#vle.webui.admin.wizard.products[] and xref:administration:channel-management-custom-channels.adoc[].
 . Select the child channels you need (for example, the mandatory {susemgr} tools and updates channels).
 . Check the [guimenu]``Add-On System Types`` check box if you need to enable any of the options. 
 . We recommend you leave the [guimenu]``Contact Method`` set to [guimenu]``Default``.
