--- a/modules/client-configuration/pages/bootstrap-repository.adoc
+++ b/modules/client-configuration/pages/bootstrap-repository.adoc
@@ -160,4 +160,4 @@ In this case, you also need to specify the parent channel to use.
 Automatic creation of a bootstrap repository might fail if you are using custom channels.
 In this case, you need to create the repository manually.
 
-For more information about custom channels, see xref:administration:custom-channels.adoc[].
+For more information about custom channels, see xref:administration:channel-management-custom-channels.adoc[].
