--- a/modules/client-configuration/pages/channels.adoc
+++ b/modules/client-configuration/pages/channels.adoc
@@ -23,7 +23,7 @@ You can modify or create new channels by navigating to menu:Software[Manage > Ch
 
 On Salt clients, you must apply the highstate after subscribing to the channel to be able to install packages.
 
-For more on using channels, including custom channels, see xref:administration:channel-management.adoc[].
+For more on using channels, including custom channels, see xref:administration:channel-management-administration.adoc[].
 
 
 
