--- a/modules/client-configuration/pages/repositories.adoc
+++ b/modules/client-configuration/pages/repositories.adoc
@@ -8,7 +8,7 @@ You must have at least one repository associated with your software channels in 
 Most default channels in {productname} are already associated with the correct repositories.
 If you are creating custom channels, you need to associate a repository that you have access to, or that you have created yourself.
 
-For more information about custom repositories and channels, see xref:administration:custom-channels.adoc[].
+For more information about custom repositories and channels, see xref:administration:channel-management-custom-channels.adoc[].
 
 
 
