--- a/modules/reference/pages/software/software-manage-menu.adoc
+++ b/modules/reference/pages/software/software-manage-menu.adoc
@@ -3,4 +3,4 @@
 
 The menu:Software[Manage] section allows you to manage custom channels, packages, and repositories.
 
-For more information about custom channels, see xref:administration:custom-channels.adoc[].
+For more information about custom channels, see xref:administration:channel-management-custom-channels.adoc[].
