--- a/modules/reference/pages/software/manage-channels.adoc
+++ b/modules/reference/pages/software/manage-channels.adoc
@@ -8,4 +8,4 @@ Click btn:[Create Channel] to create a new custom channel.
 To clone an existing channel, click btn:[Clone Channel] and select the channel to clone.
 You can choose to clone channel with or without all current patches, or select specific patches for inclusion.
 
-For more information about custom channels, see xref:administration:custom-channels.adoc[].
+For more information about custom channels, see xref:administration:channel-management-custom-channels.adoc[].
