--- a/modules/reference/pages/software/manage-packages.adoc
+++ b/modules/reference/pages/software/manage-packages.adoc
@@ -6,4 +6,4 @@ The menu:Software[Manage > Packages] section allows you to manage packages that 
 Select a channel from the drop-down box to see all packages related to that channel.
 If you have administration privileges within your organization, you can also delete packages.
 
-For more information about custom channels, see xref:administration:custom-channels.adoc[].
+For more information about custom channels, see xref:administration:channel-management-custom-channels.adoc[].
