--- a/modules/reference/pages/software/manage-repositories.adoc
+++ b/modules/reference/pages/software/manage-repositories.adoc
@@ -5,4 +5,4 @@ The menu:Software[Manage > Repositories] section allows you to manage custom or 
 
 Click btn:[Create Repository] to create a new repository.
 
-For more information about custom repositories and channels, see xref:administration:custom-channels.adoc[].
+For more information about custom repositories and channels, see xref:administration:channel-management-custom-channels.adoc[].
