--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -1,7 +1,7 @@
 // Client Configuration Guide Antora Navivation List
 // PDF Client Configuration Guide
 ifdef::backend-pdf[]
-= Client Configuration Guide: {productname} {productnumber}
+= [.title]#{productname} {productnumber}#: Client Configuration Guide
 include::./branding/pdf/entities.adoc[]
 :toclevels: 3
 :doctype: book
