--- a/modules/installation/nav-installation-guide.adoc
+++ b/modules/installation/nav-installation-guide.adoc
@@ -2,7 +2,7 @@
 
 // PDF Installation Guide
 ifdef::backend-pdf[]
-= Installation Guide: {productname} {productnumber}
+= [.title]#{productname} {productnumber}#: Installation Guide
 include::./branding/pdf/entities.adoc[]
 :toclevels: 3
 :doctype: book
