--- a/modules/upgrade/nav-upgrade-guide.adoc
+++ b/modules/upgrade/nav-upgrade-guide.adoc
@@ -2,7 +2,7 @@
 
 // PDF Upgrade Guide
 ifdef::backend-pdf[]
-= Upgrade Guide: {productname} {productnumber}
+= [.title]#{productname} {productnumber}#: Upgrade Guide
 include::./branding/pdf/entities.adoc[]
 :toclevels: 2
 :doctype: book
