--- a/modules/upgrade/pages/server-major-upgrade-uyuni.adoc
+++ b/modules/upgrade/pages/server-major-upgrade-uyuni.adoc
@@ -8,7 +8,9 @@ openSUSE Leap is the underlying base operating system (OS).
 [IMPORTANT]
 ====
 Some additional manual steps might be required, and this information is only available in the release notes.
-For important extra information about your upgrade, see the release notes at https://www.uyuni-project.org/pages/stable-version.html.
+For important extra information about your upgrade, see the release notes at:
+
+https://www.uyuni-project.org/pages/stable-version.html.
 ====
 
 
