--- a/modules/upgrade/pages/server-x.adoc
+++ b/modules/upgrade/pages/server-x.adoc
@@ -2,5 +2,6 @@
 = Server - Major Version Upgrade (X Upgrade)
 
 This type of upgrade does not apply for 4.2.
+For older documentation and instructions on major version upgrade, see:
 
-For older documentation and instructions on major version upgrade, see https://documentation.suse.com/external-tree/en-us/suma/4.1/suse-manager/upgrade/server-x.html
+link:https://documentation.suse.com/external-tree/en-us/suma/4.1/suse-manager/upgrade/server-x.html[]
