--- a/modules/upgrade/pages/db-intro.adoc
+++ b/modules/upgrade/pages/db-intro.adoc
@@ -55,7 +55,9 @@ This table shows the PostgreSQL version required for each version of {productnam
 // 2019-10-16, ke: I think we'd better keep the info on 9.4 for the moment
 [IMPORTANT]
 ====
-If you are using an older database version, such as version 9.4 or 9.6, you must migrate PostgreSQL to version 10 before you begin the {productname} migration. To upgrade from PostgreSQL 9 to version 10, see https://documentation.suse.com/external-tree/en-us/suma/4.1/suse-manager/upgrade/db-migration-10.html
+If you are using an older database version, such as version 9.4 or 9.6, you must migrate PostgreSQL to version 10 before you begin the {productname} migration. To upgrade from PostgreSQL 9 to version 10, see:
+
+link:https://documentation.suse.com/external-tree/en-us/suma/4.1/suse-manager/upgrade/db-migration-10.html[]
 ====
 
 
