more back references to the Salt bundle docs

--- a/modules/client-configuration/pages/contact-methods-saltssh.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltssh.adoc
@@ -6,6 +6,13 @@ Push via Salt SSH is used in environments where Salt clients cannot reach the {p
 In this environment, clients are located in a firewall-protected zone called a DMZ.
 No system within the DMZ is authorized to open a connection to the internal network, including the {productname} Server.
 
+[IMPORTANT]
+====
+If you want to use Push via Salt SSH you must avoid installing the Salt bundle on the client.
+For more information about the Salt bundle, see xref:client-configuration:registration-methods-saltbundle.adoc[].
+====
+
+
 The Push via Salt SSH method creates an encrypted tunnel from the {productname} Server on the internal network to the clients located on the DMZ.
 After all actions and events are executed, the tunnel is closed.
 
