--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -18,8 +18,9 @@ Use the bootstrap script procedure to register traditional clients.
 For more information, see xref:registration-bootstrap.adoc[].
 ====
 
-This procedure requires that you have installed the [package]``salt-minion`` package on the Salt client before registration.
+This procedure requires that you have installed the [package]``venv-salt-minion`` package (Salt bundle) on the Salt client before registration.
 For SLE 12 based clients, you also must have activated the [systemitem]``Advanced Systems Management`` module.
+For more information the Salt bundle, see xref:client-configuration:registration-methods-saltbundle.adoc[].
 
 
 
@@ -50,6 +51,7 @@ enable_legacy_startup_events: False
 enable_fqdns_grains: False
 ----
 
+// FIXME: change Salt bundle
 . Restart the [systemitem]``salt-minion`` service:
 +
 ----
