--- a/modules/client-configuration/pages/registration-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/registration-methods-saltbundle.adoc
@@ -1,7 +1,8 @@
 [[registration-methods-saltbundle]]
 = Client Registration with Salt Bundle
 
-Since end of 2021, the registration method with the so-called Salt bundle is available.
+The registration method with the Salt bundle is the recommended registration method as long as it does not cover your use case.
+This section explains the advantages and limitations of the current implementation.
 The Salt bundle is provided as the [package]``venv-salt-minion`` that consists of Salt and all the packages the version of Salt depends on.
 Using the Salt bundle it is no longer needed that the client provides the required Python version and [package]``python-xml`` package.
 
