--- a/modules/client-configuration/pages/registration-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/registration-methods-saltbundle.adoc
@@ -4,7 +4,7 @@
 The registration method with the Salt bundle is the recommended registration method as long as it does not cover your use case.
 This section explains the advantages and limitations of the current implementation.
 The Salt bundle is provided as the [package]``venv-salt-minion`` that consists of Salt, Python, and the Python modules Salt depends on.
-Using the Salt bundle it is no longer needed that the client provides the required Python version and [package]``python-xml`` package.
+Using the Salt bundle it is no longer needed that the client provides the required Python version or any Python modules.
 
 If you bootstrap new clients, registration with the Salt bundle is the default method.
 You can switch existing clients to the Salt bundle method.
