--- a/modules/client-configuration/pages/registration-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/registration-methods-saltbundle.adoc
@@ -8,7 +8,7 @@ Using the Salt bundle it is no longer needed that the client provides the requir
 
 If you bootstrap new clients, registration with the Salt bundle is the default method.
 You can switch existing clients to the Salt bundle method.
-If you switch, the [package]``salt-minion`` package and its Python version will stay installed.
+If you switch, the [package]``salt-minion`` package and its Python version and the Python modules will stay installed.
 ////
 Implemented the state to switch from salt-minion to venv-salt-minion - util.mgr_switch_to_venv_minion
 
