--- a/modules/client-configuration/pages/registration-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/registration-methods-saltbundle.adoc
@@ -27,7 +27,7 @@ In this case specify one of these options:
 
 [IMPORTANT]
 ====
-At the moment (2021), the Salt bundle does not support the Salt SSH contact method.
+The Salt bundle does not support the Salt SSH contact method.
 Stay with [package]``salt-minion`` package if you use Salt SSH.
 ====
 
