fix for translation pdf title page

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -1,7 +1,7 @@
 // Administration Guide Antora Navigation List
 // PDF Administration Guide
 ifdef::backend-pdf[]
-= Administration Guide: {productname} {productnumber}
+= [.title]#{productname} {productnumber}#: Administration Guide
 include::./branding/pdf/entities.adoc[]
 :toclevels: 3
 endif::[]
