--- a/modules/cookbook/nav-cookbook.adoc
+++ b/modules/cookbook/nav-cookbook.adoc
@@ -2,7 +2,7 @@
 
 // PDF Cookbook
 ifdef::backend-pdf[]
-= Cookbook: {productname} {productnumber}
+= [.title]#{productname} {productnumber}#: Cookbook
 include::./branding/pdf/entities.adoc[]
 :toclevels: 3
 :doctype: book
