--- a/modules/large-deployments/nav-large-deployments-guide.adoc
+++ b/modules/large-deployments/nav-large-deployments-guide.adoc
@@ -2,7 +2,7 @@
 
 // PDF Large Deployments Guide
 ifdef::backend-pdf[]
-= Large Deployments Guide: {productname} {productnumber}
+= [.title]#{productname} {productnumber}#: Large Deployments Guide
 include::./branding/pdf/entities.adoc[]
 :toclevels: 3
 :doctype: book
