--- a/modules/quickstart-public-cloud/nav-quickstart-public-cloud-guide.adoc
+++ b/modules/quickstart-public-cloud/nav-quickstart-public-cloud-guide.adoc
@@ -2,7 +2,7 @@
 
 // PDF Installation Guide
 ifdef::backend-pdf[]
-= Quick Start - Public Cloud: {productname} {productnumber}
+= [.title]#{productname} {productnumber}#: Quick Start - Public Cloud
 include::./branding/pdf/entities.adoc[]
 :toclevels: 3
 :doctype: book
