--- a/modules/quickstart-uyuni/nav-quickstart-uyuni-guide.adoc
+++ b/modules/quickstart-uyuni/nav-quickstart-uyuni-guide.adoc
@@ -2,7 +2,7 @@
 
 // PDF Installation Guide
 ifdef::backend-pdf[]
-= Quick Start - Uyuni: {productname} {productnumber}
+= [.title]#{productname} {productnumber}#: Quick Start - Uyuni
 include::./branding/pdf/entities.adoc[]
 :toclevels: 3
 :doctype: book
