--- a/modules/reference/nav-reference-guide.adoc
+++ b/modules/reference/nav-reference-guide.adoc
@@ -1,7 +1,7 @@
 // Reference Guide Antora Navigation List
 
 ifdef::backend-pdf[]
-= Reference Guide: {productname} {productnumber}
+= [.title]#{productname} {productnumber}#: Reference Guide
 include::./branding/pdf/entities.adoc[]
 :toclevels: 4
 :doctype: book
