--- a/modules/retail/nav-retail-guide.adoc
+++ b/modules/retail/nav-retail-guide.adoc
@@ -2,7 +2,7 @@
 
 // PDF Retail Guide
 ifdef::backend-pdf[]
-= Retail Guide: {productname} {productnumber}
+= [.title]#{productname} {productnumber}#: Retail Guide
 include::./branding/pdf/entities.adoc[]
 :toclevels: 2
 :doctype: book
