--- a/modules/salt/nav-salt-guide.adoc
+++ b/modules/salt/nav-salt-guide.adoc
@@ -2,7 +2,7 @@
 
 // PDF Salt Guide
 ifdef::backend-pdf[]
-= Salt Guide: {productname} {productnumber}
+= [.title]#{productname} {productnumber}#: Salt Guide
 include::./branding/pdf/entities.adoc[]
 :toclevels: 3
 :doctype: book
