--- a/modules/quickstart-sap/nav-quickstart-sap-guide.adoc
+++ b/modules/quickstart-sap/nav-quickstart-sap-guide.adoc
@@ -2,7 +2,7 @@
 
 // PDF Installation Guide
 ifdef::backend-pdf[]
-= Quick Start - SAP: {productname} {productnumber}
+= [.title]#{productname} {productnumber}#: Quick Start - SAP
 include::./branding/pdf/entities.adoc[]
 :toclevels: 3
 :doctype: book
