Removing ING FORM from section name.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -22,8 +22,8 @@ endif::[]
 *** xref:auth-methods-sso.adoc[Authentication With SSO]
 *** xref:auth-methods-pam.adoc[Authentication With PAM]
 // Backing up
-** xref:backup-restore-intro.adoc[Backing Up and Restoring]
-*** xref:backup-restore.adoc[Backing Up and Restoring {productname}]
+** xref:backup-restore-intro.adoc[Back Up and Restore]
+*** xref:backup-restore.adoc[Back Up and Restore {productname}]
 // Channel Management
 ** xref:channel-management-intro.adoc[Channel Management]
 *** xref:channel-management-administration.adoc[Channel Administration]
