--- a/modules/client-configuration/pages/registration-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/registration-methods-saltbundle.adoc
@@ -1,10 +1,11 @@
 [[registration-methods-saltbundle]]
 = Client Registration with Salt Bundle
 
-The registration method with the Salt bundle is the recommended registration method as long as it does not cover your use case.
+The registration method with the Salt bundle is the recommended registration method as long as it covers your use case.
 This section explains the advantages and limitations of the current implementation.
 The Salt bundle is provided as the [package]``venv-salt-minion`` that consists of Salt, Python, and the Python modules Salt depends on.
-Using the Salt bundle it is no longer needed that the client provides the required Python version or any Python modules.
+Using the Salt bundle, in most cases it is no longer needed that the client provides the required Python version or any Python modules.
+Bootstrapping with {webui} still requires Python to be installed on the client.
 
 If you bootstrap new clients, registration with the Salt bundle is the default method.
 You can switch existing clients to the Salt bundle method.
