Final comemnts from PR.

--- a/modules/administration/pages/live-patching-channel-setup.adoc
+++ b/modules/administration/pages/live-patching-channel-setup.adoc
@@ -1,5 +1,5 @@
 [[live-patching-channel-setup]]
-= Channels Set Up for Live Patching
+= Configure Channels for Live Patching
 
 A reboot is required every time you update the full kernel package.
 Therefore, it is important that clients using Live Patching do not have newer kernels available in the channels they are assigned to.
