--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -1,5 +1,5 @@
 [[reports]]
-= Reports Generation
+= Generating Reports
 
 The [command]``spacewalk-report`` command is used to produce a variety of reports.
 These reports can be helpful for taking inventory of your subscribed systems, users, and organizations.
