--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -1,5 +1,5 @@
 [[ssl-certs-import]]
-= Imported SSL Certificates
+= Importing Custom SSL Certificates
 
 By default, {productname} uses a self-signed certificate.
 For additional security, you can import a custom certificate, signed by a third party certificate authority (CA).
