better also mention [package]``salt-minion``
venv-salt-minion is not available for all clients we are talking about here
per feedback

--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -18,7 +18,7 @@ Use the bootstrap script procedure to register traditional clients.
 For more information, see xref:registration-bootstrap.adoc[].
 ====
 
-This procedure requires that you have installed the [package]``venv-salt-minion`` package (Salt bundle) on the Salt client before registration.
+This procedure requires that you have installed the [package]``venv-salt-minion`` (Salt bundle) or the [package]``salt-minion`` package on the Salt client before registration.
 For more information the Salt bundle, see xref:client-configuration:registration-methods-saltbundle.adoc[].
 
 
