--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -3,11 +3,11 @@
 
 Registering clients with the {productname} {webui} works for Salt clients only.
 
-// FIXME: change Salt bundle
 If you are bootstrapping Salt clients using the {webui}, you need to ensure that the client system has Python installed before you begin.
 For Salt clients running {sles}{nbsp}12 or older, you also need the [package]``python-xml`` package.
-If you use the Salt bundle, which now is the default, the needed Python environment will be provided automatically.
-For more information, see xref:client-configuration:registration-methods-saltbundle.adoc[].
+// FIXME: change Salt bundle, when implemented
+// If you use the Salt bundle, which now is the default, the needed Python environment will be provided automatically.
+// For more information, see xref:client-configuration:registration-methods-saltbundle.adoc[].
 
 [IMPORTANT]
 ====
