enable description of util.mgr_switch_to_venv_minion state

--- a/modules/client-configuration/pages/registration-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/registration-methods-saltbundle.adoc
@@ -10,14 +10,16 @@ Bootstrapping with {webui} still requires Python to be installed on the client.
 If you bootstrap new clients, registration with the Salt bundle is the default method.
 You can switch existing clients to the Salt bundle method.
 If you switch, the [package]``salt-minion`` package and its Python version and the Python modules will stay installed.
-////
-Implemented the state to switch from salt-minion to venv-salt-minion - util.mgr_switch_to_venv_minion
 
-It's better to run it in two steps:
+The Salt state [literal]``util.mgr_switch_to_venv_minion`` is available to switch from [package]``salt-minion`` to [package]``venv-salt-minion``.  It is recommended to switch to [package]``venv-salt-minion`` in two steps:
 
-    Apply it with no pillar specified first to switch to venv-salt-minion (copy config files etc., but not cleaning up the original salt-minion confgs and packages)
-    Apply it with mgr_purge_non_venv_salt set to True to remove salt-minion and mgr_purge_non_venv_salt_files set to True to remove all the files related to salt-minion
-////
+.Procedure: Switching with [literal]``util.mgr_switch_to_venv_minion`` state to [package]``venv-salt-minion``
+
+. Apply [literal]``util.mgr_switch_to_venv_minion`` with no pillar specified first.
+  This will result in the switch to [package]``venv-salt-minion`` with copying configuration files etc.
+  It will not cleaning up the original [package]``salt-minion`` configurations and its packages.
+. Apply [literal]``util.mgr_switch_to_venv_minion`` with [literal]``mgr_purge_non_venv_salt`` set to [literal]``True`` to remove [package]``salt-minion`` and with [literal]``mgr_purge_non_venv_salt_files`` set to [literal]``True`` to remove all the files related to [package]``salt-minion``.
+
 
 On the other hand, it is also possible to avoid installing the Salt bundle and keep using [package]``salt-minion`` instead.
 In this case specify one of these options:
