--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -41,17 +41,19 @@ Before you begin, you will need to have created an account with {scc}, and downl
 
 
 .Procedure: Preparing for SLES Installation
+
 . In the Virtual Machine Manager tool ([command]``virt-manager``), click menu:File[New Virtual Machine].
+
 . Click btn:[Local install media (ISO image or CDROM)].
+
 . In the [guimenu]``Create a new virtual machine`` dialog, click btn:[Browse] and locate the full SLES image you downloaded from your SCC account.
+
 . Configure your machine with at least 2 GB RAM and a minimum of 2 CPUs.
+
 . Create a storage device with a minimum of 230 GB storage space for the installation.
-    During the SLES installation this disk should be partitioned into the following partitions:
+During the SLES installation this disk should be partitioned into the following partitions:
 +
-// FIXME: not sure about swap space
-// |4{nbsp}GB Swap space
-// Can we move this table out of the procedure? --LKB 2020-04-16
-+
+
 [cols="1", options="header"]
 |===
 | Disk Space Requirements
@@ -59,10 +61,15 @@ Before you begin, you will need to have created an account with {scc}, and downl
 | 100{nbsp}GB XFS partition (or dedicated virtual disk) for [path]``/var/cache/``
 |===
 +
+
 The remaining storage space will be used by the operating system for the root partition.
+
 . Click btn:[Finish] to save the installation settings and begin the installation.
 
-For more information on installing {sles}, see https://documentation.suse.com/sles/15-SP3/html/SLES-all/article-installation.html.
+For more information on installing {sles}, see:
+
+link:https://documentation.suse.com/sles/15-SP3/html/SLES-all/article-installation.html[].
+
 
 
 [[installation-proxy-sles]]
@@ -72,39 +79,52 @@ For more information on installing {sles}, see https://documentation.suse.com/sl
 [[proc-installation-proxy-sles]]
 .Procedure: Changing SLES for {productname} Proxy Installation
 
-// Most steps are currently needed because of 4.0 workarounds
-// FIXME:
-// 2020-07-28, ke: is this also still valid for 4.1?
 . Log in as `root`.
+
 . Uninstall the `sles-release` package:
 +
+
 ----
 rpm -e --nodeps sles-release
 ----
++
+
 . Register {productname} Proxy with SCC (for example, replace `<productversion>` with `{productnumber}` and `<architecture>` with `x86_64`):
 +
+
 ----
 SUSEConnect -e <EMAIL_ADDRESS> -r <SUSE_MANAGER_PROXY_CODE> \
-  -p SUSE-Manager-Proxy/<productversion>/<architecture>
+-p SUSE-Manager-Proxy/<productversion>/<architecture>
 ----
++
+
 . Add {productname} repositories:
 +
+
 ----
 SUSEConnect -p sle-module-basesystem/15.3/x86_64
 SUSEConnect -p sle-module-server-applications/15.3/x86_64
 SUSEConnect -p sle-module-suse-manager-proxy/4.2/x86_64
 ----
-. Check that you have allowed installing recommended packages.
-    Check the settings in `/etc/zypp/zypp.conf`:
 +
+
+. Check that you have allowed installing recommended packages.
+Check the settings in `/etc/zypp/zypp.conf`:
++
+
 ----
 solver.onlyRequires = false
 ----
++
+
 . Install the {productname} Proxy pattern:
 +
+
 ----
 zypper in -t pattern suma_proxy
 ----
++
+
 . Reboot.
 
 Continue with registering the installed {productname} Proxy as a client: xref:proxy-registration.adoc[].
