separated uyuni and suma supported client tables ifdefs were causing too much confusion in pdf output

--- a/modules/installation/pages/client-requirements.adoc
+++ b/modules/installation/pages/client-requirements.adoc
@@ -9,13 +9,140 @@ Fields marked as {question} are under consideration, and may or may not be suppo
 [NOTE]
 ====
 For {suse} operating systems, the version and SP level must be under general support (normal or LTSS) to be supported with {productname}.
-For details on supported product versions, see https://www.suse.com/lifecycle.
+For details on supported product versions, see:
+
+link:https://www.suse.com/lifecycle[]
+
 For non-{suse} operating systems, including {rhel}, {centos}, and {oracle}, only the latest available version is under general support.
 ====
 
+// SUMA Supported Clients
+ifeval::[{suma-content} == true]
+[[mgr.support.clients]]
+[cols="1,1,1,1", options="header"]
+.Supported Client Systems
+|===
+| Operating System
+| Architecture
+| Traditional Clients
+| Salt Clients
+
+| {sle} 15
+| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {check}
+| {check}
+
+| {sle} 12
+| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {check}
+| {check}
+
+| {sle} 11
+| {x86}, {x86_64}, {ipf}, {ppc64}, {ibmz}
+| {check}
+| {check}
+
+| {sles} for SAP 15
+| {x86_64}, {ppc64le}
+| {check}
+| {check}
+
+| {sles} for SAP 12
+| {x86_64}, {ppc64le}
+| {check}
+| {check}
+
+| {micro}
+| {x86_64}, {ppc64le}, {aarch64}
+| {cross}
+| {check}
+
+| {opensuse} Leap 15
+| {x86_64}, {aarch64}
+| {check}
+| {check}
+
+| {sles} ES 8
+| {x86_64}
+| {cross}
+| {check}
+
+| {sles} ES 7
+| {x86_64}
+| {check}
+| {check}
+
+| {almalinux} 8
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {amazon} 2
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {centos} 8
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {centos} 7
+| {x86_64}, {aarch64}
+| {check}
+| {check}
+
+| {debian} 10
+| {x86_64}
+| {cross}
+| {check}
+
+| {debian} 9
+| {x86_64}
+| {cross}
+| {check}
+
+| {oracle} 8
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {oracle} 7
+| {x86_64}, {aarch64}
+| {check}
+| {check}
+
+| {rhel} 8
+| {x86_64}
+| {cross}
+| {check}
+
+| {rhel} 7
+| {x86_64}
+| {check}
+| {check}
+
+| {rocky} 8
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {ubuntu} 20.04
+| {x86_64}
+| {cross}
+| {check}
+
+| {ubuntu} 18.04
+| {x86_64}
+| {cross}
+| {check}
+
+|===
+endif::[]
 
 
-[[mgr.supported.clients]]
+ifeval::[{uyuni-content} == true]
+[[uyuni.supported.clients]]
 [cols="1,1,1,1", options="header"]
 .Supported Client Systems
 |===
@@ -70,12 +197,10 @@ For non-{suse} operating systems, including {rhel}, {centos}, and {oracle}, only
 | {check}
 | {check}
 
-ifeval::[{uyuni-content} == true]
 | {alibabaclo} 2
 | {x86_64}, {aarch64}
 | {cross}
 | {check}
-endif::[]
 
 | {almalinux} 8
 | {x86_64}, {aarch64}
@@ -88,42 +213,22 @@ endif::[]
 | {check}
 
 | {centos} 8
-ifeval::[{uyuni-content} == true]
 | {x86_64}, {ppc64le}, {aarch64}
-endif::[]
-ifeval::[{suma-content} == true]
-| {x86_64}, {aarch64}
-endif::[]
 | {cross}
 | {check}
 
 | {centos} 7
-ifeval::[{uyuni-content} == true]
 | {x86_64}, {ppc64le}, {aarch64}
-endif::[]
-ifeval::[{suma-content} == true]
-| {x86_64}, {aarch64}
-endif::[]
 | {check}
 | {check}
 
 | {debian} 10
-ifeval::[{uyuni-content} == true]
 | {x86_64}, {aarch64}, armv7l, i586
-endif::[]
-ifeval::[{suma-content} == true]
-| {x86_64}
-endif::[]
 | {cross}
 | {check}
 
 | {debian} 9
-ifeval::[{uyuni-content} == true]
 | {x86_64}, {aarch64}, armv7l, i586
-endif::[]
-ifeval::[{suma-content} == true]
-| {x86_64}
-endif::[]
 | {cross}
 | {check}
 
@@ -148,12 +253,7 @@ endif::[]
 | {check}
 
 | {rocky} 8
-ifeval::[{uyuni-content} == true]
 | {x86_64}, {ppc64le}, {aarch64}
-endif::[]
-ifeval::[{suma-content} == true]
-| {x86_64}, {aarch64}
-endif::[]
 | {cross}
 | {check}
 
@@ -168,6 +268,7 @@ endif::[]
 | {check}
 
 |===
+endif::[]
 
 [NOTE]
 ====
