fixed broken list in registration-boostrap.adoc

--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -129,31 +129,43 @@ When you have finished creating your script, you can use it to register clients.
 
 
 .Procedure: Running the Bootstrap Script
+
 . On the {productname} Server, log in as root.
     At the command prompt, and change to the bootstrap directory:
 +
+
 ----
 cd /srv/www/htdocs/pub/bootstrap/
 ----
++
+
 . Run this command to execute the bootstrap script on the client; replace [systemitem]`` EXAMPLE.COM`` with the host name of your client:
 +
+
 ----
 cat bootstrap-sles15.sh | ssh root@EXAMPLE.COM /bin/bash
 ----
 +
+
 . Alternatively, on the client, run this command:
 +
+
 ----
 curl -Sks https://server_hostname/pub/bootstrap/bootstrap-sles15.sh | /bin/bash
 ----
++
 
 [IMPORTANT]
 ====
 To avoid problems, make sure the bootstrap script is executed using [command]``bash``.
 ====
++
 
-The script downloads the required dependencies located in the repositories directory you created earlier.
+This script downloads the required dependencies located in the repositories directory you created earlier.
++
+
 . When the script has finished running, you can check that your client is registered correctly by opening the {productname} {webui} and navigating to menu:Systems[Overview] to ensure the new client is listed.
+
 . If you used the script to register the Salt client, open the {productname} {webui} and navigate to menu:Salt[Keys] to accept the client key.
 
 [WARNING]
@@ -162,12 +174,3 @@ When new packages or updates are installed on the client using {productname}, an
 To review a package EULA, open the package detail page in the {webui}.
 ====
 
-
-////
-// Moved to System Locking chapter --LKB 2020-07-17
-// see https://github.com/uyuni-project/uyuni-docs/issues/41
-
-// == Package Locks
-
-// ...
-////
